RESOLVED FIXED99527
IndexedDB: Stub out chromium success handlers for integers and undefined values
https://bugs.webkit.org/show_bug.cgi?id=99527
Summary IndexedDB: Stub out chromium success handlers for integers and undefined values
Alec Flett
Reported 2012-10-16 17:03:57 PDT
IndexedDB: Stub out chromium success handlers for integers and undefined values
Attachments
Patch (1.83 KB, patch)
2012-10-16 17:04 PDT, Alec Flett
no flags
Alec Flett
Comment 1 2012-10-16 17:04:37 PDT
Alec Flett
Comment 2 2012-10-16 17:06:03 PDT
jsbell/dgrogan - quick review? I'm adding: onSuccess(int64_t) - for the result of count(), previously calling onSuccess(SerializedScriptValue::numberValue(count)) onSuccess() - anytime we were calling onSuccess(SerializedScriptValue::undefinedValue()) This stubs these out so I can land chromium, then I'll have a webkit patch to follow
WebKit Review Bot
Comment 3 2012-10-16 17:07:03 PDT
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
Joshua Bell
Comment 4 2012-10-16 17:15:21 PDT
Comment on attachment 169060 [details] Patch LGTM. We may want to sort the lines so onSuccess() comes first.
Alec Flett
Comment 5 2012-10-16 17:24:19 PDT
abarth@ - r?
Adam Barth
Comment 6 2012-10-16 18:00:40 PDT
Comment on attachment 169060 [details] Patch Ok.
WebKit Review Bot
Comment 7 2012-10-16 18:30:19 PDT
Comment on attachment 169060 [details] Patch Clearing flags on attachment: 169060 Committed r131540: <http://trac.webkit.org/changeset/131540>
WebKit Review Bot
Comment 8 2012-10-16 18:30:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.