IndexedDB: Stub out chromium success handlers for integers and undefined values https://bugs.webkit.org/show_bug.cgi?id=99527

Reviewed by Adam Barth.

Add onSuccess stubs so that chromium IPC glue can land.

* public/WebIDBCallbacks.h:
(WebKit::WebIDBCallbacks::onSuccess):


Canonical link: https://commits.webkit.org/117499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131540 268f45cc-cd09-0410-ab3c-d52691b4dbfc